chore: update navbar

--- a/src/pug/components/navbar.pug
+++ b/src/pug/components/navbar.pug
@@ -12,6 +12,7 @@ mixin navbar(value = {})
   - let tabs = ["about", "portfolio", "contact"];
 
   nav.navbar(aria-label="Main Navigation")
+    .navbar-overlay
     .navbar-layout
       .navbar-head
         +link({
