--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -89,19 +89,23 @@
     }
 
     &-main {
-        z-index: 10;
-        @apply items-center flex-nowrap flex;
+        z-index: 1;
+        @apply relative items-center flex-nowrap flex;
     }
 
     &-link {
-        transition: color #{$transitionDuration} ease;
+        transition: color #{$transitionDuration} ease, visibility 0.7s ease,
+            opacity 0.35s ease;
         text-transform: uppercase;
         text-decoration: none;
+        visibility: visible;
+        opacity: 1;
 
         color: $black;
         @include applyTheme(color, "dark");
         @apply font-700 text-sm tracking-wide;
-        @apply w-full px-5 py-2;
+        @apply w-full px-5;
+        line-height: theme("spacing.10");
 
         .link-content {
             @apply relative inline-block;
@@ -109,7 +113,7 @@
             &:after {
                 transition: transform 0.25s cubic-bezier(0.25, 0.46, 0.45, 0.94),
                     background-color #{$transitionDuration} ease;
-                @apply absolute -bottom-1 left-0 transform scale-x-0;
+                @apply absolute bottom-0 left-0 transform scale-x-0;
                 @include applyTheme(background-color, "primary-dark");
                 border: 1px solid transparent;
                 transform-origin: 100%;
@@ -150,7 +154,7 @@
     &-btn {
         transition: color #{$transitionDuration} ease,
             background-color 0.45s ease;
-        @apply ml-2 w-10 h-10 rounded-md;
+        @apply ml-3 w-10 h-10 rounded-md;
         @include applyTheme(background-color, "light");
 
         svg {
@@ -178,6 +182,20 @@
         display: block;
     }
 
+    &-overlay {
+        @apply bg-gray-300 dark:bg-gray-900 bg-opacity-70 dark:bg-opacity-80;
+        transition: background-color #{$transitionDuration} ease,
+            opacity #{$transitionDuration} ease;
+        @apply absolute top-0 left-0 w-screen h-screen;
+        opacity: 0;
+        pointer-events: none;
+        z-index: -1;
+
+        @supports (backdrop-filter: blur(5px)) {
+            @apply backdrop-filter backdrop-blur;
+        }
+    }
+
     // Mobile navbar settings
     @screen lt-sm {
         &-mobile-only {
@@ -198,7 +216,7 @@
 
         &-layout:before,
         &-head {
-            z-index: 15;
+            z-index: 25;
         }
 
         &-layout:before,
@@ -212,20 +230,22 @@
         }
 
         &-main {
-            transition: transform 0.5s ease-out, visibility 0.4s ease,
+            transition: transform 0.35s cubic-bezier(0.61, 1, 0.88, 1),
                 background-color #{$transitionDuration} ease;
             transform: translate3d(0, -100%, 0);
-            z-index: 0;
-            @apply p-2 w-full invisible;
+            @apply px-2 w-full rounded-bl-xl rounded-br-xl;
+            @apply py-2 space-y-2;
+            z-index: -1;
 
             background-color: lighten($very-light, 2%);
             @include applyTheme(background-color, "very-light");
         }
 
         &-link {
-            transition: color 0.25s ease, background-color 0.25s ease;
-            line-height: theme("spacing.10");
-            @apply my-1;
+            transition: color 0.25s ease, background-color 0.25s ease,
+                visibility 0.5s ease, opacity 0.3s ease;
+            visibility: hidden;
+            opacity: 0;
 
             &:hover {
                 @include applyTheme(background-color, "navbar-gray");
@@ -233,9 +253,9 @@
 
             &.active {
                 @include applyTheme(background-color, "primary-dark");
-
                 &,
-                &:hover {
+                &:hover,
+                &:focus-visible {
                     @include applyTheme(color, "invert-white");
                 }
 
@@ -266,7 +286,18 @@
 
             .navbar-main {
                 transform: translate3d(0, 0, 0);
+            }
+
+            .navbar-link {
+                transition: color 0.25s ease, background-color 0.25s ease,
+                    visibility 0.5s ease, opacity 0.4s ease 0.1s;
                 visibility: visible;
+                opacity: 1;
+            }
+
+            .navbar-overlay {
+                opacity: 1;
+                pointer-events: auto;
             }
         }
     }
