--- a/src/pug/components/image.pug
+++ b/src/pug/components/image.pug
@@ -3,6 +3,7 @@ mixin image(value = {})
     let _class = value.class;
     let source = value.src || "cloudinary/city";
     let alt = value.alt || "Alternate text";
+    let overlay = value.overlay ?? true;
 
     let external = /\/fetch\//.test(source);
     let src = source.replace("fetch/", "");
@@ -13,7 +14,8 @@ mixin image(value = {})
 
   .image&attributes(attributes)
     figure(class=_class title=alt)
-      .image-overlay
+      if overlay
+        .image-overlay
       img.placeholder-img(src!=`${urlParse("w_50,e_blur:500")}.jpg` alt=alt loading="lazy")
       img.core-img(data-src!=`${urlParse()}.jpg` alt=alt loading="lazy" itemprop="url")
       noscript
