--- a/src/pug/components/img-view.pug
+++ b/src/pug/components/img-view.pug
@@ -11,9 +11,10 @@ mixin img-view(value = {})
     let origin = `https://res.cloudinary.com/okikio-assets/image/${external ? "fetch" : "upload"}/`;
     let urlParse = (filters = "w_auto") => cloudinaryTest ? `${origin + "q_auto:best,f_auto," + filters},dpr_auto/${src.replace(/^cloudinary\//, "")}` : src;
 
-  .img-view
-    figure.load-img(itemprop="image" itemscope itemtype="https://schema.org/ImageObject")
-      .img-view-contain
-        img.core-img(data-src!=`${urlParse()}.webp` alt=alt loading="lazy" itemprop="url")&attributes(attributes)
-        noscript
-          img.no-script-img(src!=`${urlParse()}.jpg` aria-hidden="true" alt=alt loading="lazy")
+  .image&attributes(attributes)
+    .img-view
+      figure(class=_class title=alt)
+        .img-view-contain
+          img.core-img(data-src!=`${urlParse()}.webp` alt=alt loading="lazy" itemprop="url")&attributes(attributes)
+          noscript
+            img.no-script-img(src!=`${urlParse()}.jpg` aria-hidden="true" alt=alt loading="lazy")
