--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -24,7 +24,8 @@ html(lang="en")
     meta(http-equiv="Accept-CH" content="DPR, Viewport-Width, Width")
     meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
     meta(name="color-scheme" content="dark light")
-
+    
+    link(rel='preconnect' href='https://fonts.gstatic.com')
     link(rel="stylesheet" href="/css/app.min.css" async)
 
     noscript
